--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/Index.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/Index.razor
@@ -14,19 +14,19 @@
       <VStack>
         <p>
           Welcome to your new app with <HyperLink href="https://timewarpengineering.github.io/blazor-state/"> Blazor State</HyperLink> management and an easily extensible pipeline utilizing
-          <HyperLink href="https://github.com/jbogard/MediatR">MediatR.</HyperLink>
+          <HyperLink href="https://github.com/jbogard/MediatR" target="blank">MediatR.</HyperLink>
         </p>
         <p class="mt-4">
-          <HyperLink href="https://github.com/TimeWarpEngineering/blazor-state">Blazor State GitHub project</HyperLink>
+          <HyperLink href="https://github.com/TimeWarpEngineering/blazor-state" target="blank">Blazor State GitHub project</HyperLink>
         </p>
-        
-        <HyperLink href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux Dev Tools Chrome Extension </HyperLink>
+
+        <HyperLink href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en" target="blank">Redux Dev Tools Chrome Extension </HyperLink>
 
         <SimpleAlert class="mt-4" Title="Tailwind UI">
           This site is built with
-          <HyperLink href="https://tailwindcss.com/">Tailwind css</HyperLink>
+          <HyperLink href="https://tailwindcss.com/" target="blank">Tailwind css</HyperLink>
           and
-          <HyperLink href="https://tailwindui.com">Tailwind UI</HyperLink>
+          <HyperLink href="https://tailwindui.com" target="blank">Tailwind UI</HyperLink>
         </SimpleAlert>
 
         <img class="w-full" src="/images/TheFreezeTeam/SOLID_Team.png" />
