--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/App.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/App.razor
@@ -5,6 +5,7 @@
 <Router AppAssembly="typeof(Web.Spa.Program).Assembly"  PreferExactMatches=@true>
   <Found Context="routeData">
     <RouteView RouteData=@routeData DefaultLayout=@typeof(MainLayout) />
+    <FocusOnNavigate RouteData="@routeData" Selector="main" />
   </Found>
   <NotFound>
     <PageTitle>Not Found</PageTitle>
